--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -5,3 +5,5 @@
     <button mat-raised-button>Live <mat-icon>add</mat-icon></button>
   </mat-toolbar-row>
 </mat-toolbar>
+<app-live-list></app-live-list>
+
